--- a/src/app/components/sucursal/sucursal.component.html
+++ b/src/app/components/sucursal/sucursal.component.html
@@ -126,6 +126,8 @@
                                                         class="fa fa-pen"></i></span></button>
                                             <button type="button" routerLinkActive="router-link-active" class="btn btn-danger" (click)="onDeleteUser(sucursal.id)"><span><i
                                                         class="fa fa-trash"></i></span></button>
+                                            <button type="button" class="btn btn-success" routerLink="/admin/sucursal-usuario/{{sucursal.id}}/true"><span><i
+                                                class="fa fa-plus"></i></span></button>
                                         </td>
                                     </tr>
                                 </tbody>
