--- a/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
+++ b/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
@@ -4,15 +4,34 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">{{id? 'Editar Sucursal': 'Nueva Sucursal'}}
+                        <h4 *ngIf="id!=null && !sw" class="card-title">{{id? 'Editar Sucursal': 'Nueva Sucursal'}}
+                            <strong>{{' : '+formValue.razon_social}}</strong></h4>
+                        <h4 *ngIf="id!=null && sw" class="card-title">{{'Relacion sucursal usuario'}}
                             <strong>{{' : '+formValue.razon_social}}</strong></h4>
                         <p class="card-category"> </p>
                     </div>
-                    <!-- <div>
-                        <pre class="card card-block card-header mb-3">Model: {{selected | json}}</pre>
-                        <input [(ngModel)]="selected" [typeahead]="states" [isAnimated]="true"
-                           class="form-control">
-                    </div> -->
+                    <!-- formulario unir sucursal usuario -->
+                    <div class="card-body border-bottom">
+                        <div *ngIf="sw"  class="form-row">
+                            <div class="form-group col-md-4">
+                                <pre class="border mb-2 pt-2 pb-2">Id: {{id}} / Sucursal: {{formValue.razon_social}}</pre>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <input [(ngModel)]="selecteduser" [(ngModel)]="selectedid"
+                                   [typeahead]="usuarios"
+                                   [isAnimated]="true"
+                                   typeaheadOptionField="userName"
+                                   typeaheadGroupField="nombres"
+                                   class="form-control">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <pre class="border mb-3 pt-2 pb-2">Pertenece a: {{selecteduser}}</pre>
+                            </div>
+                        </div>
+                        <button class="btn btn-danger" (click)="cancelar()">Cancelar</button>
+                        <button class="btn btn-info" (click)="relacion()">Relacionar</button>
+                    </div>
+                    <!-- fin formulario unir sucursal usuario -->
                     <div class="card-body">
                         <form [formGroup]="sucursalFormGroup" (ngSubmit)="onSubmit()">
                             <div class="form-row">
@@ -223,18 +242,11 @@
                             </div>
                         </div>
 
-                        <!-- <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="relacion_usuario">Relacion usuario</label>
-                                    <input type="text" name="relacion_usuario" class="form-control" placeholder="relacion_usuario" formControlName="relacion_usuario" [ngClass]="{ 'is-invalid': (submitted && formControls.relacion_usuario.errors && formControls.relacion_usuario.errors.required) || (formControls.relacion_usuario.errors?.required && formControls.relacion_usuario.touched && !submitted) }">
-                                    <div *ngIf="(submitted && formControls.relacion_usuario.errors && formControls.relacion_usuario.errors.required) && formControls.relacion_usuario.dirty || (formControls.relacion_usuario.errors?.required && formControls.relacion_usuario.touched && !submitted)">
-                                        <p class="validate-error">El campo requerido</p>
-                                    </div>
-                                </div>
-                        </div> -->
                         <button type="submit" class="btn btn-success float-right">Guardar Sucursal</button>
                         <button class="btn btn-danger float-right" (click)="cancelar()">Cancelar</button>
                         </form>
+
+
                     </div>
                 </div>
             </div>
