--- a/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
+++ b/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
@@ -15,21 +15,24 @@
                         <div *ngIf="sw"  class="form-row">
                             <div class="form-group col-md-4">
                                 <pre class="border mb-2 pt-2 pb-2">Id: {{id}} / Sucursal: {{formValue.razon_social}}</pre>
+                                <pre class="card card-block card-header mb-3">Usuario seleccionado: {{selecteduser | json}}</pre>
                             </div>
                             <div class="form-group col-md-4">
-                                <input [(ngModel)]="selecteduser" [(ngModel)]="selectedid"
+                                <input [(ngModel)]="keyword"
                                    [typeahead]="usuarios"
                                    [isAnimated]="true"
-                                   typeaheadOptionField="userName"
-                                   typeaheadGroupField="nombres"
+                                   typeaheadOptionField="nombres"
+                                   (typeaheadOnSelect)="onSelect($event)"
+                                   (ngModelChange)="searchByKeyword()"
+                                   typeaheadGroupField="apellidos"
                                    class="form-control">
                             </div>
                             <div class="form-group col-md-4">
-                                <pre class="border mb-3 pt-2 pb-2">Pertenece a: {{selecteduser}}</pre>
+                                <pre class="border mb-3 pt-2 pb-2">Pertenece a: {{keyword}}</pre>
                             </div>
+                            <button class="btn btn-danger" (click)="cancelar()">Cancelar</button>
+                            <button class="btn btn-info" (click)="relacion()">Relacionar</button>
                         </div>
-                        <button class="btn btn-danger" (click)="cancelar()">Cancelar</button>
-                        <button class="btn btn-info" (click)="relacion()">Relacionar</button>
                     </div>
                     <!-- fin formulario unir sucursal usuario -->
                     <div class="card-body">
