--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<div *ngIf="hideNavbarOutlet()">-->
+<h1>..............Hola.............</h1>
 <div *ngIf="hideNavbarOutlet()">
   <router-outlet name="navbar"></router-outlet>
 </div>
